@@ -8,7 +8,6 @@ Team
 HQ
 --
 - tabulku aktualniho poradi aktualizovat klikanim do grafu
-- auto refresh logu udalosti
 - v grafu zvyraznit startovni/cilovou/vzdavaci indicii
 
 HQ - prehledova tabulka
